--- a/chris.html
+++ b/chris.html
@@ -120,7 +120,7 @@
 
     <script>
         // Constants
-        const CALIFORNIA_OFFSET = -8; // PST
+        const CALIFORNIA_OFFSET = +8; // PST
         const SPECIAL_DATES = {
             '12/19': `<div>Happy birthday Bubuya! Wishing you the happiest birthday with all my love, kisses, and hugs.<br><img src='birthday_image.png' alt='Birthday Celebration' style='width:150px; height:auto; margin-bottom: -150px;'</div>`,
             '3/24': "Catching up to you! Just grew a little older with you by my side.",
